[gd_scene load_steps=4 format=3 uid="uid://c88ncuvk838mf"]

[ext_resource type="Script" uid="uid://dodibrwn4mkb6" path="res://gui/btn_speedUp.gd" id="1_agkej"]
[ext_resource type="Script" uid="uid://3i2wccs0wul" path="res://gui/CanvasLayer.gd" id="1_t3j0s"]
[ext_resource type="Script" uid="uid://cie5kcemw7gqq" path="res://gui/Pause.gd" id="4_16kwp"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_t3j0s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 1200.0
offset_bottom = 801.0

[node name="btn_speedUp" type="Button" parent="Control"]
top_level = true
layout_mode = 0
offset_left = 7.0
offset_right = 87.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
text = "-1X"
script = ExtResource("1_agkej")

[node name="Steps_Show" type="Label" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 69.0
offset_right = 45.0
offset_bottom = 95.0
text = "-1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PHY_Show" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 42.0
offset_right = 46.0
offset_bottom = 68.0
text = "-1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 57.0
offset_top = 71.0
offset_right = 123.0
offset_bottom = 95.0
text = "Time(s)
"

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 57.0
offset_top = 43.0
offset_right = 135.0
offset_bottom = 67.0
text = "Speed(x)
"

[node name="LastResults" type="RichTextLabel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_top = 734.0
offset_right = 1180.0
offset_bottom = 796.0
text = "Last Results
"

[node name="Tactics" type="RichTextLabel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 1012.0
offset_top = 6.0
offset_right = 1189.0
offset_bottom = 87.0
text = "Tactics

"

[node name="Blue_Score" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 567.0
offset_top = 9.0
offset_right = 605.0
offset_bottom = 32.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
text = "0

"
scroll_active = false

[node name="Red_Score" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 624.0
offset_top = 9.0
offset_right = 662.0
offset_bottom = 32.0
theme_override_colors/default_color = Color(1, 0.211765, 0.160784, 1)
text = "0

"
scroll_active = false

[node name="Pause" type="Button" parent="Control"]
process_mode = 3
layout_mode = 0
offset_left = 100.0
offset_top = -1.0
offset_right = 123.0
offset_bottom = 30.0
focus_mode = 1
text = "II"
clip_text = true
script = ExtResource("4_16kwp")

[connection signal="button_down" from="Control/btn_speedUp" to="Control/btn_speedUp" method="_on_button_down"]
[connection signal="pressed" from="Control/Pause" to="Control/Pause" method="_on_pressed"]
